Import GXT 1.2