@@ -7,7 +7,9 @@
  */
 package com.extjs.gxt.ui.client.widget.form;
 
+import com.google.gwt.core.client.GWT;
 import com.google.gwt.i18n.client.NumberFormat;
+import com.google.gwt.i18n.client.constants.NumberConstants;
 
 /**
  * <code>PropertyEditory</code> that uses a {@link NumberFormat}. When
@@ -22,8 +24,17 @@ import com.google.gwt.i18n.client.NumberFormat;
  */
 public class NumberPropertyEditor implements PropertyEditor<Number> {
 
+  protected NumberConstants numbers = (NumberConstants) GWT.create(NumberConstants.class);
   protected NumberFormat format;
+  protected String alpahRegex = "[a-zA-Z]";
+  protected String currencySymbolRegex = "\\$";
+  protected String groupSeparator = numbers.groupingSeparator();
+
   protected Class type;
+
+  private boolean stripCurrencySymbol;
+  private boolean stripAlphas;
+  private boolean stripGroupSeparator;
 
   /**
    * Creates a new number property editor with the default number type (Double).
@@ -38,24 +49,6 @@ public class NumberPropertyEditor implements PropertyEditor<Number> {
    * @param type the number class (Short, Integer, Long, Float, Double)
    */
   public NumberPropertyEditor(Class type) {
-    this.type = type;
-  }
-
-  /**
-   * Returns the number class.
-   * 
-   * @return the number class
-   */
-  public Class getType() {
-    return type;
-  }
-
-  /**
-   * Sets the number type used when converting a string to a number.
-   * 
-   * @param type the type (Short, Integer, Long, Float, Double)
-   */
-  public void setType(Class type) {
     this.type = type;
   }
 
@@ -78,29 +71,49 @@ public class NumberPropertyEditor implements PropertyEditor<Number> {
   }
 
   public Number convertStringValue(String value) {
+    // first try to create a typed value directly from the raw text
+    try {
+      if (type == Short.class) {
+        return Short.valueOf(value);
+      } else if (type == Integer.class) {
+        return Integer.valueOf(value);
+      } else if (type == Long.class) {
+        return Long.valueOf(value);
+      } else if (type == Float.class) {
+        return Float.valueOf(value);
+      } else {
+        return Double.valueOf(value);
+      }
+    } catch (Exception e) {
+    }
+
+    // second, stip all unwanted characters
+    String stripValue = stripValue(value);
+    try {
+      if (type == Short.class) {
+        return Short.valueOf(stripValue);
+      } else if (type == Integer.class) {
+        return Integer.valueOf(stripValue);
+      } else if (type == Long.class) {
+        return Long.valueOf(stripValue);
+      } else if (type == Float.class) {
+        return Float.valueOf(stripValue);
+      } else {
+        return Double.valueOf(stripValue);
+      }
+    } catch (Exception e) {
+    }
+
+    // third try parsing with the formatter
     if (format != null) {
       Double d = format.parse(value);
-      if (type == Short.class) {
-        return d.shortValue();
-      } else if (type == Integer.class) {
-        return d.intValue();
-      } else if (type == Long.class) {
-        return d.longValue();
-      } else if (type == Float.class) {
-        return d.floatValue();
-      }
-      return d;
+      return returnTypedValue(d);
+    } else {
+      Double d = NumberFormat.getDecimalFormat().parse(value);
+      return returnTypedValue(d);
     }
-    if (type == Short.class) {
-      return Short.valueOf(value);
-    } else if (type == Integer.class) {
-      return Integer.valueOf(value);
-    } else if (type == Long.class) {
-      return Long.valueOf(value);
-    } else if (type == Float.class) {
-      return Float.valueOf(value);
-    }
-    return new Double(value);
+
+    // return new Double(value);
   }
 
   /**
@@ -120,12 +133,114 @@ public class NumberPropertyEditor implements PropertyEditor<Number> {
   }
 
   /**
+   * Returns the number class.
+   * 
+   * @return the number class
+   */
+  public Class getType() {
+    return type;
+  }
+
+  /**
+   * Returns true if alhpa characters are being removed.
+   * 
+   * @return true if alphas are being removed
+   */
+  public boolean isStripAlphas() {
+    return stripAlphas;
+  }
+
+  /**
+   * Returns true if the currency symbol is being removed.
+   * 
+   * @return true if currency symbol is being removed
+   */
+  public boolean isStripCurrencySymbol() {
+    return stripCurrencySymbol;
+  }
+
+  /**
+   * Returns true if the group separator is being removed before parsing a
+   * string value.
+   * 
+   * @return true if the group separator is being removed
+   */
+  public boolean isStripGroupSeparator() {
+    return stripGroupSeparator;
+  }
+
+  /**
    * Sets the editor's format.
    * 
    * @param format the format
    */
   public void setFormat(NumberFormat format) {
     this.format = format;
+  }
+
+  /**
+   * True to remove alpha characters when parsing a string value (defaults to
+   * false).
+   * 
+   * @param stripAlphas true to remove all alpha characters
+   */
+  public void setStripAlphas(boolean stripAlphas) {
+    this.stripAlphas = stripAlphas;
+  }
+
+  /**
+   * True to remove the currency symbol when parsing a string value (defaults to
+   * false).
+   * 
+   * @param stripCurrencySymbol true to the currency symbol
+   */
+  public void setStripCurrencySymbol(boolean stripCurrencySymbol) {
+    this.stripCurrencySymbol = stripCurrencySymbol;
+  }
+
+  /**
+   * True to remove the group separator, as defined by GWT NumberConstants, when
+   * parsing a string value (defaults to false).
+   * 
+   * @param stripGroupSeparator true to remove the group separator
+   */
+  public void setStripGroupSeparator(boolean stripGroupSeparator) {
+    this.stripGroupSeparator = stripGroupSeparator;
+  }
+
+  /**
+   * Sets the number type used when converting a string to a number.
+   * 
+   * @param type the type (Short, Integer, Long, Float, Double)
+   */
+  public void setType(Class type) {
+    this.type = type;
+  }
+
+  protected Number returnTypedValue(Number number) {
+    if (type == Short.class) {
+      return number.shortValue();
+    } else if (type == Integer.class) {
+      return number.intValue();
+    } else if (type == Long.class) {
+      return number.longValue();
+    } else if (type == Float.class) {
+      return number.floatValue();
+    }
+    return number;
+  }
+
+  protected String stripValue(String value) {
+    if (stripCurrencySymbol) {
+      value = value.replaceAll(currencySymbolRegex, "");
+    }
+    if (stripAlphas) {
+      value = value.replaceAll(alpahRegex, "");
+    }
+    if (stripGroupSeparator) {
+      value = value.replaceAll(groupSeparator, "");
+    }
+    return value;
   }
 
 }
